--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
   "name": "testx-postgres-keywords",
-  "version": "0.1.0",
-  "description": "Keywords to test postgres db",
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "Keywords to test postgres db with testx.io",
+  "main": "index.coffee",
   "dependencies": {
-    "grunt": "^0.4.5",
-    "jasmine-custom-message": "^0.7.3",
-    "pg": "^4.3.0",
+    "pg": "^6.0.3",
+    "pg-connection-string": "^0.1.3",
     "q": "^1.4.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "testx": "^1.11.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "protractor test/conf.coffee",
+    "test-docker": "docker run --rm -it -v `pwd`:/work --net=host testx/protractor test/conf.coffee"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/gioren/testx-postgres-keywords.git"
+    "url": "git+ssh://git@github.com/testxio/testx-postgres-keywords.git"
   },
   "keywords": [
     "testx",
     "keywords",
     "postgres",
+    "sql",
+    "database",
     "db"
   ],
-  "author": "Giovanni Renfurm",
+  "author": "Giovanni Renfurm, Gantcho Kojuharov",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gioren/testx-postgres-keywords/issues"
+    "url": "https://github.com/testxio/testx-postgres-keywords/issues"
   },
-  "homepage": "https://github.com/gioren/testx-postgres-keywords#readme"
+  "homepage": "https://github.com/testxio/testx-postgres-keywords#readme"
 }
