--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "testx-postgres-keywords",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Keywords to test postgres db with testx.io",
   "main": "index.coffee",
   "dependencies": {
-    "pg": "^6.0.3",
+    "lodash": "^4.17.4",
+    "pg": "^6.1.2",
     "pg-connection-string": "^0.1.3",
     "q": "^1.4.1"
   },
   "peerDependencies": {
-    "testx": "^2.3.1"
+    "testx": "^2.5.0"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "testx": "^2.3.1"
+    "testx": "^2.5.0"
   },
   "scripts": {
     "test-local": "protractor test/conf.coffee",
