--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
   "name": "testx-postgres-keywords",
-  "version": "2.1.2",
+  "version": "3.0.0",
   "description": "Keywords to test postgres db with testx.io",
-  "main": "index.coffee",
+  "main": "lib/index.js",
   "dependencies": {
     "lodash": "^4.17.4",
     "pg": "^6.1.2",
     "pg-connection-string": "^0.1.3"
   },
   "peerDependencies": {
-    "testx": "^2.5.0"
+    "testx": "^2.6.4"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "testx": "^2.5.0"
+    "testx": "^2.6.4"
   },
   "scripts": {
-    "test-local": "protractor test/conf.coffee",
-    "pretest": "docker run --rm -d --name postgres-testx -p 5432:5432 postgres:9-alpine; sleep 5",
-    "test": "docker run --rm -it -v `pwd`:/work --link postgres-testx testx/protractor test/conf.coffee",
+    "build": "coffee  -o lib/ -c src/",
+    "prepublish": "npm run build",
+    "pretest":
+      "docker run --rm -d --name postgres-testx -p 5432:5432 postgres:9-alpine; sleep 5",
+    "test": "protractor test/conf.coffee",
     "posttest": "docker kill postgres-testx"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/testxio/testx-postgres-keywords.git"
   },
-  "keywords": [
-    "testx",
-    "keywords",
-    "postgres",
-    "sql",
-    "database",
-    "db"
-  ],
+  "keywords": ["testx", "keywords", "postgres", "sql", "database", "db"],
   "author": "Giovanni Renfurm, Gantcho Kojuharov",
   "license": "ISC",
   "bugs": {
