--- a/package.json
+++ b/package.json
@@ -1,37 +1,50 @@
 {
-  "name": "@testx/keywords-postgres",
-  "version": "3.0.1",
-  "description": "Keywords to test postgres db with testx.io",
+  "name": "@ictu/testx-keywords-postgres",
+  "version": "v3.0.6",
+  "description": "Keywords to test postgres db with testx",
   "main": "lib/index.js",
   "dependencies": {
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "pg": "^6.1.2",
     "pg-connection-string": "^0.1.3"
   },
   "peerDependencies": {
-    "testx": "^2.6.4"
+    "@ictu/testx": "^2.11.2"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "testx": "^2.6.4"
+    "@ictu/testx": "^2.11.2",
+    "protractor": "^5.4.0"
   },
   "scripts": {
     "build": "coffee  -o lib/ -c src/",
-    "prepublish": "npm run build",
-    "pretest":
-      "docker run --rm -d --name postgres-testx -p 5432:5432 postgres:9-alpine; sleep 5",
-    "test": "protractor test/conf.coffee",
-    "posttest": "docker kill postgres-testx"
+    "local-docker": "docker run --rm -d --name postgres-testx -p 5432:5432 postgres:9-alpine",
+    "pretest": "webdriver-manager update --gecko=false",
+    "test": "protractor test/conf.coffee"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/testxio/testx-postgres-keywords.git"
+    "url": "https://github.com/ICTU/testx-postgres-keywords.git"
   },
-  "keywords": ["testx", "keywords", "postgres", "sql", "database", "db"],
-  "author": "Giovanni Renfurm, Gantcho Kojuharov",
+  "publishConfig": {
+    "@ictu:registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
+  "files": [
+    "lib/*"
+  ],
+  "keywords": [
+    "testx",
+    "keywords",
+    "postgres",
+    "sql",
+    "database",
+    "db"
+  ],
+  "author": "ICTU",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/testxio/testx-postgres-keywords/issues"
+    "url": "https://github.com/ICTU/testx-postgres-keywords/issues"
   },
-  "homepage": "https://github.com/testxio/testx-postgres-keywords#readme"
+  "homepage": "https://github.com/ICTU/testx-postgres-keywords#readme"
 }
